codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__provider_popup_without_login.snap
---
source: tui/src/chatwidget/tests/provider_popup.rs
expression: popup
---
  Select Provider
  Choose a model provider for this session.

› 1. alpha (current)  Alpha - https://alpha.example/v1

  Press enter to confirm or esc to go back
