codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__provider_popup_without_user_providers.snap
---
source: tui/src/chatwidget/tests/provider_popup.rs
expression: popup
---
  Select Provider
  Choose a model provider for this session.

› 1. openai (current)  OpenAI

  Press enter to confirm or esc to go back
