codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__replayed_manual_compact_user_action.snap
---
source: tui/src/chatwidget/tests/history_replay.rs
expression: lines_to_single_string(&lines)
---

› /compact local


• Context compacted
