codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__resumed_file_change.snap
---
source: tui/src/chatwidget/tests/history_replay.rs
expression: rendered
---
● Edited src/lib.rs (+1 -1)
    1 -old
    1 +new
