codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__resumed_file_change_and_terminal_wait.snap
---
source: tui/src/chatwidget/tests/history_replay.rs
expression: rendered
---
● Edited src/lib.rs (+1 -1)
    1 -old
    1 +new


● Waited for background terminal · cargo test -p codex-tui
